Fix: Add server IP addresses to CORS allowed origins